Closed Bug 97771 Opened 23 years ago Closed 23 years ago

getComputedStyle answers for background-color #ffffff instead of transparent

Categories

(Core :: DOM: CSS Object Model, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: glazou, Assigned: glazou)

References

Details

Attachments

(2 files, 2 obsolete files)

1. use test case attached
2. click on all anchors
3. all values ok but the 4th one ; answer should be "transparent"
bug ==> myself ; patch proposed for review...
Assignee: jst → glazman
The 'transparent' keyword should be obtained from 
nsCSSProps::kBackgroundColorKTable[]
Attachment #47805 - Attachment is obsolete: true
/me should stop jetlagging... Pierre: new version attached
r=pierre
Attachment #47806 - Flags: review+
I just discovered that the query of getComputedStyle on the body of a html
document answers, with my patch, "transparent". See
http://lxr.mozilla.org/seamonkey/source/content/html/content/src/nsHTMLBodyElement.cpp#609
to understand why. Yet another patch coming soon...

(btw, working on CSS in Composer, and therefore using DOM 2 Style on large scale
 is __really__ helpful for debugging)
Comment on attachment 47806 [details] [diff] [review]
patch v2

sr=jst
Attachment #47806 - Flags: superreview+
Blocks: 98159
Comment on attachment 47806 [details] [diff] [review]
patch v2

patch in attachment #47806 [details] [diff] [review] obsolete because of comment 2001-08-31 08:15
Attachment #47806 - Attachment is obsolete: true
pPierre : can you review patch v3, please ?
jst : can you confirm sr= on new patch please ?
Comment on attachment 48284 [details] [diff] [review]
patch v3

r=pierre
Attachment #48284 - Flags: review+
Comment on attachment 48284 [details] [diff] [review]
patch v3

sr=hyatt.  yay! i just ran into this today! i'm glad you're fixing it!
Attachment #48284 - Flags: superreview+
Checked in trunk
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: