getComputedStyle answered for background-color #ffffff instead of transparent; b=97771, r=pierre, sr=hyatt